--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
   <form>
     <label for="lastname">Votre nom  : </label><input type="text" name="lastname" id="lastname"/>
+     <button name="submit" id="submit" onClick="Valider();">Valider</button>
   </form>
+
+
+
+
+
+
+<script type="text/javascript" src="java.js"></script>
 </body>
 </html>
